# EduVision-CV-SAS

./: .gitattributes  .gitignore  CMakeLists.txt
models/: fc_training_data.yml
sources/: main.cpp
sources/User/: User.cpp  User.hpp
